Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberNumObj.quorum
class Main
    action Main
        Number n
        number num
        n:SetValue(7.5)
        num = cast(number, n)
        if num = 7.5
            output "passed"
        end
    end
end